--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,36 @@
-/* RESET */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+header{
+    background-color: rgb(6, 19, 31);
 }
 
-div.box{
-    width: calc(100% / 3);
-    margin: 1rem;
+header img{
+    width: 2rem;
+    margin: 1rem 1rem 1rem 7rem;
 }
 
-img{
-    width: 200px;
+main{
+    background-color: rgb(29, 45, 60);
+    color: white;
+}
+div.my_container{
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+main div.single-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(17, 32, 48);    
+    width: calc((100% / 3) - 3rem);
+    margin: 2rem 1.5rem;
+    padding: 2rem;
+}
+
+div.single-card img{
+    width: 150px;
+    border: 3px solid white;
 }
